<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="tonyjmnz.splitmate.NewSplitgroupFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/groupName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/splitgroup_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/members"
        android:id="@+id/members"
        android:layout_below="@+id/groupName"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/memberList"
        android:layout_below="@+id/members"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_above="@+id/newMember"
        android:headerDividersEnabled="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/newMember"
        android:layout_above="@+id/addMember"
        android:hint="@string/new_member_email" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_member"
        android:id="@+id/addMember"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/createGroup" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_group"
        android:id="@+id/createGroup"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
